@@ -9,6 +9,7 @@ plyr 0.1.10 (2009-XX-X) ---------------------------------------------------
 * ninteraction now preserves NAs
 * leaving .fun as NULL now always returns list (thanks to Stavros Macrakis for the bug report)
 * splitter_d: fixed bug when .drop = FALSE
+* concatenate function that works like c but does not discard attributes.
 
 plyr 0.1.9 (2009-06-23) ---------------------------------------------------
 
